# rust-tide-sqlx-crud

./: .gitignore  Cargo.toml  Dockerfile  README.md
db/: 0001_users-table.sql
src/: main.rs
