[package]
name = "rust-tide-sqlx-crud"
version = "0.1.0"
authors = ["Sergey Melnychuk"]
edition = "2018"

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
sqlx = { version = "0.5.5", features = [ "any", "sqlite", "postgres", "migrate", "runtime-async-std-rustls" ] }
tide = "0.16.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"

