[package]
name = "rust-tide-sqlx-crud"
version = "0.1.0"
authors = ["Sergey Melnychuk"]
edition = "2018"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
sqlx = { version = "0.8.5", features = [ "any", "sqlite", "postgres", "migrate", "runtime-tokio-rustls" ] }
tide = "0.16.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
